add Category Model

--- a/todoapp/templates/components/topnav.html
+++ b/todoapp/templates/components/topnav.html
@@ -3,9 +3,6 @@
       <a class="btn btn-ghost text-xl">TO-DO</a>
     </div>
     <div class="flex-none gap-2">
-      <div class="form-control">
-        <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
-      </div>
       <div class="dropdown dropdown-end">
         <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
           <div class="w-10 rounded-full">
@@ -24,7 +21,7 @@
             </a>
           </li>
           <li><a>Settings</a></li>
-          <li><a>Logout</a></li>
+          <li><a href="{% url "user_logout" %}">Logout</a></li>
         </ul>
       </div>
     </div>
