--- a/todoapp/templates/todoapp/layout.html
+++ b/todoapp/templates/todoapp/layout.html
@@ -34,9 +34,10 @@
           <header data-theme="light">
             {% include "components/topnav.html" %}
           </header>
-          <label for="my-drawer-2" class="btn btn-primary drawer-button lg:hidden">
-            Open drawer
-          </label>
+          <main class="p-10">
+            {% block content %}
+            {% endblock %}
+          </main>
         </div>
     {% include "components/sidebar.html" %}
     {% endblock %}
