--- a/todoapp/templates/components/sidebar.html
+++ b/todoapp/templates/components/sidebar.html
@@ -1,9 +1,20 @@
+{% load static %}
 <div class="drawer-side">
     <label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
-    <ul class="menu text-base-content min-h-full w-64 p-4 gap-3" data-theme="aqua">
-      <!-- Sidebar content here -->
-      <li><a class="bg-white py-2 text-black rounded-md"><i class="fa-solid fa-list-check"></i>My Tasks</a></li>
-      <li><a class="py-2"><i class="fa-solid fa-list"></i> Task Categories</a></li>
-    </ul>
+    <div class="menu text-base-content min-h-full w-64 p-4" data-theme="aqua">
+      <div class="flex items-center gap-2">
+        <img class="w-16" src="{% static "todoapp/images/user.png" %}" alt="">
+        <div>
+          <h2 class="text-white text-2xl font-medium">{{ request.user.username|title }}</h2>
+          <span class="text-xs text-white">{{ request.user.email }}</span>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <ul class="flex flex-col gap-3">
+        <!-- Sidebar content here -->
+        <li><a href="{% url "home" %}" class="py-2 {% if request.resolver_match.url_name == 'home' %}active{% endif %}" style="color: white"><i class="fa-solid fa-list-check"></i>My Tasks</a></li>
+        <li><a href="{% url "category_list" %}" class="py-2 {% if request.resolver_match.url_name == 'category_list' %} active {% endif %}" style="color: white"><i class="fa-solid fa-list"></i> Task Categories</a></li>
+      </ul>
+    </div>
   </div>
 </div>
