--- a/todoapp/templates/components/topnav.html
+++ b/todoapp/templates/components/topnav.html
@@ -1,14 +1,132 @@
 <nav class="navbar shadow-sm">
     <div class="flex-1">
-      <a class="btn btn-ghost text-xl">TO-DO</a>
+      <label for="my-drawer-2" class="btn btn-circle swap swap-rotate lg:hidden">
+        <!-- this hidden checkbox controls the state -->
+        <input type="checkbox" />
+      
+        <!-- hamburger icon -->
+        <svg
+          class="swap-off fill-current"
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 512 512">
+          <path d="M64,384H448V341.33H64Zm0-106.67H448V234.67H64ZM64,128v42.67H448V128Z" />
+        </svg>
+      
+        <!-- close icon -->
+        <svg
+          class="swap-on fill-current"
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 512 512">
+          <polygon
+            points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49" />
+        </svg>
+      </label>
+      <a href="{% url "home" %}" class="btn bg-white hover:bg-white shadow-none border-none text-xl" data-theme="light">
+        <svg class="w-12 h-12" xmlns="http://www.w3.org/2000/svg" width="1024" height="1024" fill="none" viewBox="0 0 1024 1024" id="to-do">
+          <rect width="690" height="690" x="167" y="167" fill="#fff" rx="100"></rect>
+          <g filter="url(#filter0_diii_37_283)">
+            <path fill="#0080FF" d="M481.062 697.111L550.025 628.014C557.832 620.184 557.832 607.505 550.025 599.675L367.606 416.908C359.799 409.078 347.131 409.078 339.324 416.908L270.361 486.005C262.554 493.835 262.554 506.514 270.361 514.344L452.78 697.111C460.587 704.941 473.244 704.941 481.062 697.111Z"></path>
+            <path fill="url(#paint0_linear_37_283)" d="M481.062 697.111L550.025 628.014C557.832 620.184 557.832 607.505 550.025 599.675L367.606 416.908C359.799 409.078 347.131 409.078 339.324 416.908L270.361 486.005C262.554 493.835 262.554 506.514 270.361 514.344L452.78 697.111C460.587 704.941 473.244 704.941 481.062 697.111Z"></path>
+            <path fill="url(#paint1_linear_37_283)" fill-opacity=".7" d="M481.062 697.111L550.025 628.014C557.832 620.184 557.832 607.505 550.025 599.675L367.606 416.908C359.799 409.078 347.131 409.078 339.324 416.908L270.361 486.005C262.554 493.835 262.554 506.514 270.361 514.344L452.78 697.111C460.587 704.941 473.244 704.941 481.062 697.111Z"></path>
+          </g>
+          <g filter="url(#filter1_diii_37_283)">
+            <path fill="#00C2FF" d="M453.365 697.608L383.356 627.464C375.83 619.926 375.83 607.709 383.356 600.171L645.357 337.653C652.884 330.115 665.079 330.115 672.594 337.653L742.602 407.796C750.129 415.334 750.129 427.551 742.602 435.089L480.601 697.608C473.086 705.134 460.891 705.134 453.365 697.608Z"></path>
+            <path fill="url(#paint2_linear_37_283)" d="M453.365 697.608L383.356 627.464C375.83 619.926 375.83 607.709 383.356 600.171L645.357 337.653C652.884 330.115 665.079 330.115 672.594 337.653L742.602 407.796C750.129 415.334 750.129 427.551 742.602 435.089L480.601 697.608C473.086 705.134 460.891 705.134 453.365 697.608Z"></path>
+            <path fill="url(#paint3_linear_37_283)" fill-opacity=".7" d="M453.365 697.608L383.356 627.464C375.83 619.926 375.83 607.709 383.356 600.171L645.357 337.653C652.884 330.115 665.079 330.115 672.594 337.653L742.602 407.796C750.129 415.334 750.129 427.551 742.602 435.089L480.601 697.608C473.086 705.134 460.891 705.134 453.365 697.608Z"></path>
+          </g>
+          <defs>
+            <linearGradient id="paint0_linear_37_283" x1="410.416" x2="410.416" y1="306.188" y2="638.106" gradientUnits="userSpaceOnUse">
+              <stop offset=".005" stop-color="#fff" stop-opacity=".08"></stop>
+              <stop offset=".085" stop-opacity=".08"></stop>
+              <stop offset=".337" stop-color="#fff" stop-opacity=".1"></stop>
+              <stop offset=".661" stop-color="#fff" stop-opacity=".1"></stop>
+              <stop offset="1" stop-opacity=".1"></stop>
+            </linearGradient>
+            <linearGradient id="paint1_linear_37_283" x1="410.193" x2="410.193" y1="411.035" y2="702.984" gradientUnits="userSpaceOnUse">
+              <stop stop-color="#0080FF"></stop>
+              <stop offset="1" stop-color="#fff" stop-opacity="0"></stop>
+            </linearGradient>
+            <linearGradient id="paint2_linear_37_283" x1="563.263" x2="563.263" y1="198.673" y2="620.752" gradientUnits="userSpaceOnUse">
+              <stop offset=".005" stop-color="#fff" stop-opacity=".08"></stop>
+              <stop offset=".085" stop-opacity=".08"></stop>
+              <stop offset=".337" stop-color="#fff" stop-opacity=".1"></stop>
+              <stop offset=".661" stop-color="#fff" stop-opacity=".1"></stop>
+              <stop offset="1" stop-opacity=".1"></stop>
+            </linearGradient>
+            <linearGradient id="paint3_linear_37_283" x1="562.979" x2="562.979" y1="332" y2="703.252" gradientUnits="userSpaceOnUse">
+              <stop stop-color="#00C2FF"></stop>
+              <stop offset="1" stop-color="#fff" stop-opacity="0"></stop>
+            </linearGradient>
+            <filter id="filter0_diii_37_283" width="331.375" height="335.412" x="244.506" y="401.035" color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="13.462"></feOffset>
+              <feGaussianBlur stdDeviation="10"></feGaussianBlur>
+              <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.501961 0 0 0 0 1 0 0 0 0.6 0"></feColorMatrix>
+              <feBlend in2="BackgroundImageFix" result="effect1_dropShadow_37_283"></feBlend>
+              <feBlend in="SourceGraphic" in2="effect1_dropShadow_37_283" result="shape"></feBlend>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="20.19"></feOffset>
+              <feGaussianBlur stdDeviation="45"></feGaussianBlur>
+              <feComposite in2="hardAlpha" k2="-1" k3="1" operator="arithmetic"></feComposite>
+              <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.501961 0 0 0 0 1 0 0 0 0.6 0"></feColorMatrix>
+              <feBlend in2="shape" result="effect2_innerShadow_37_283"></feBlend>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="15"></feOffset>
+              <feGaussianBlur stdDeviation="6.5"></feGaussianBlur>
+              <feComposite in2="hardAlpha" k2="-1" k3="1" operator="arithmetic"></feComposite>
+              <feColorMatrix values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.3 0"></feColorMatrix>
+              <feBlend in2="effect2_innerShadow_37_283" result="effect3_innerShadow_37_283"></feBlend>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="-10"></feOffset>
+              <feGaussianBlur stdDeviation="7"></feGaussianBlur>
+              <feComposite in2="hardAlpha" k2="-1" k3="1" operator="arithmetic"></feComposite>
+              <feColorMatrix values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.25 0"></feColorMatrix>
+              <feBlend in2="effect3_innerShadow_37_283" result="effect4_innerShadow_37_283"></feBlend>
+            </filter>
+            <filter id="filter1_diii_37_283" width="410.536" height="414.715" x="357.711" y="322" color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="13.462"></feOffset>
+              <feGaussianBlur stdDeviation="10"></feGaussianBlur>
+              <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.760784 0 0 0 0 1 0 0 0 0.6 0"></feColorMatrix>
+              <feBlend in2="BackgroundImageFix" result="effect1_dropShadow_37_283"></feBlend>
+              <feBlend in="SourceGraphic" in2="effect1_dropShadow_37_283" result="shape"></feBlend>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="20.19"></feOffset>
+              <feGaussianBlur stdDeviation="45"></feGaussianBlur>
+              <feComposite in2="hardAlpha" k2="-1" k3="1" operator="arithmetic"></feComposite>
+              <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.760784 0 0 0 0 1 0 0 0 0.6 0"></feColorMatrix>
+              <feBlend in2="shape" result="effect2_innerShadow_37_283"></feBlend>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="15"></feOffset>
+              <feGaussianBlur stdDeviation="6.5"></feGaussianBlur>
+              <feComposite in2="hardAlpha" k2="-1" k3="1" operator="arithmetic"></feComposite>
+              <feColorMatrix values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.3 0"></feColorMatrix>
+              <feBlend in2="effect2_innerShadow_37_283" result="effect3_innerShadow_37_283"></feBlend>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></feColorMatrix>
+              <feOffset dy="-10"></feOffset>
+              <feGaussianBlur stdDeviation="7"></feGaussianBlur>
+              <feComposite in2="hardAlpha" k2="-1" k3="1" operator="arithmetic"></feComposite>
+              <feColorMatrix values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.25 0"></feColorMatrix>
+              <feBlend in2="effect3_innerShadow_37_283" result="effect4_innerShadow_37_283"></feBlend>
+            </filter>
+          </defs>
+        </svg>
+        ToDo App
+      </a>
     </div>
     <div class="flex-none gap-2">
       <div class="dropdown dropdown-end">
         <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 rounded-full">
-            <img
-              alt="Tailwind CSS Navbar component"
-              src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          <div class="avatar online placeholder">
+            <div class="bg-neutral text-neutral-content w-10 rounded-full">
+              <span class="text-xl">{{ request.user.username.0|upper }}</span>
+            </div>
           </div>
         </div>
         <ul
