--- a/todoapp/templates/todoapp/home.html
+++ b/todoapp/templates/todoapp/home.html
@@ -1,41 +1,64 @@
 {% extends "todoapp/layout.html" %}
 
+{% block title %}
+My Tasks
+{% endblock %}
+
 {% block content %}
-<div class="overflow-x-auto p-10 shadow-md rounded-xl" data-theme="light">
-    <table class="table">
-      <!-- head -->
-      <thead>
-        <tr>
-          <th></th>
-          <th>Name</th>
-          <th>Job</th>
-          <th>Favorite Color</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- row 1 -->
-        <tr class="bg-base-200">
-          <th>1</th>
-          <td>Cy Ganderton</td>
-          <td>Quality Control Specialist</td>
-          <td>Blue</td>
-        </tr>
-        <!-- row 2 -->
-        <tr>
-          <th>2</th>
-          <td>Hart Hagerty</td>
-          <td>Desktop Support Technician</td>
-          <td>Purple</td>
-        </tr>
-        <!-- row 3 -->
-        <tr>
-          <th>3</th>
-          <td>Brice Swyre</td>
-          <td>Tax Accountant</td>
-          <td>Red</td>
-        </tr>
-      </tbody>
-    </table>
+<div class="mb-6 flex justify-between items-center">
+  <h1 class="text-2xl font-medium text-gray-900">Tasks</h1>
+  <a href="{% url "add_task" %}" class="btn" data-theme="aqua">Create Task</a>
 </div>
 
+<div class="overflow-x-auto rounded-xl" data-theme="light">
+  <table class="table">
+    <!-- head -->
+    <thead>
+      <tr class="bg-slate-100 border-b">
+        <th>TITLE</th>
+        <th>CATEGORY</th>
+        <th>PRIORITY</th>
+        <th>STATUS</th>
+        <th>DUE DATE</th>
+        <th>ACTION</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for task in tasks %}
+        <tr>
+          <td class="font-medium">{{ task.title }}</td>
+          <td class="font-medium text-gray-500">{{ task.category.name }}</td>
+          <td class="font-semibold">
+            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full
+                {% if task.priority == 'high' %}bg-red-100 text-red-800
+                {% elif task.priority == 'medium' %}bg-yellow-100 text-yellow-800
+                {% else %}bg-green-100 text-green-800{% endif %}">
+                {{ task.priority|title }}
+            </span>
+          </td>
+          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full
+                {% if task.status == 'completed' %}bg-green-100 text-green-800
+                {% elif task.status == 'in_progress' %}bg-blue-100 text-blue-800
+                {% else %}bg-gray-100 text-gray-800{% endif %}">
+                {{ task.status|title|cut:"_" }}
+            </span>
+          </td>
+          <td class="font-semibold text-gray-500">{{ task.due_date }}</td>
+          <td class="flex gap-3">
+            <a href="{% url "edit_task"  task_id=task.id %}" class="font-medium text-purple-500">Edit</a>
+            <a onclick="return confirm('Are you sure you want to delete this task?')" href="{% url "delete_task" task_id=task.id %}" class="font-medium text-red-500">Delete</a>
+          </td>
+        </tr>
+      {% empty %}
+          <tr>
+              <td colspan="6" class="px-6 py-4 text-center text-sm text-gray-500">No tasks found.</td>
+          </tr>
+      {% endfor %}
+
+
+     
+    </tbody>
+  </table>
+</div>
 {% endblock %}
