--- a/todoapp/templates/todoapp/signup.html
+++ b/todoapp/templates/todoapp/signup.html
@@ -5,9 +5,9 @@
 {% block body %}
 <section class="mx-auto flex flex-col lg:flex-row items-center xl:max-w-screen-xl my-[20px] md:my-[160px] gap-8 px-3 md:px-12">
     <section class="basis-full lg:basis-[50%]">
-      <img class="w-full" src="{% static "images/concept-of-to-do-list.png" %}" alt="">
+      <img class="w-full" src="{% static "todoapp/images/concept-of-to-do-list.png" %}" alt="">
     </section>
-    <section class="max-w-screen-sm mx-auto shadow-xl px-4 py-8 md:p-16 bg-white w-full basis-full lg:basis-[50%]">
+    <section class="max-w-screen-sm mx-auto shadow-xl px-4 py-8 md:p-16 bg-white w-full basis-full lg:basis-[50%] rounded-xl">
       <h2 class="text-3xl font-semibold text-center">Sign Up</h2>
       <p class="text-center mt-3 mb-7">
         Enter your credentials to create your account
